syntax = "proto3";
package chain4energy.c4echain.cfeev;

import "gogoproto/gogo.proto";

option go_package = "github.com/chain4energy/c4e-chain/x/cfeev/types";

message EnergyTransferOffer {
  uint64 id = 1;
  string owner = 2; 
  string chargerId = 3; 
  ChargerStatus charger_status = 4; 
  Location location = 5;
  uint64 tariff = 6;
  string name = 7;
  PlugType plug_type = 8;
}

enum ChargerStatus {
    ACTIVE = 0;
    BUSY = 1;
    INACTIVE = 2;
    CHARGER_STATUS_UNSPECIFIED = 3;
}

enum PlugType {
    Type1 = 0;
    Type2 = 1; 
    CHAdeMO = 2; 
    CCS = 3;
    PLUG_TYPE_UNSPECIFIED = 4;
}

message Location {
  string latitude = 1 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = true
  ];
  string longitude = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = true
  ];
}
